fix(recipe): migrate terra plate recipe